--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Instagram</title>
+	<title>Instagram</title>
+	<link rel="stylesheet" type="text/css" href="css/main.css"> 
 </head>
-<body>
-  Instagram
 
-  Capture and Share the World's Moments
+<body class="background-img">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+	<div class="container">
+	
+		<div class="phones">
+			<img src="images/phones.png">
+		</div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+		<div class="main-content">
 
-  Oh yeah, did we mention it's free?
+			<div class="logo-and-login">
+				<div class="logo">
+					<img src="images/brand.png" alt="Instagram">
+				</div>
 
-  Download on the App Store
-  Get it on Google Play
+				<button class="login">
+					<img src="images/home.png">
+					<p>Log in</p>
+				</button>
+				<div class="clearfloats"></div>
+			</div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+			<div class="brand-desc">
+				<div class="brand-desc-text">
+					<h1>Capture and Share <br> the World's Moments</h1>
 
-  &copy; 2014 Instagram
+					Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.<br><br>
+
+					Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br><br>
+
+					Oh yeah, did we mention it's free?
+				</div>
+			</div>
+
+			<div class="app-links">
+				<div>
+					<img src="images/badge-iphone.png" alt="Download on the App Store">
+				</div>
+				<div>
+					<img src="images/badge-android.png" alt="Get it on Google Play">
+				</div>
+			</div>
+
+		</div>
+
+	</div>
+
+	<center>
+	<footer>
+		<a href="https://www.instagram.com/about/us/">About Us</a>
+		<a href="https://help.instagram.com/">Support</a>
+		<a href="http://blog.instagram.com">Blog</a>
+		<a href="https://instagram-press.com/">Press</a>
+		<a href="https://www.instagram.com/developer/">API</a>
+		<a href="https://www.instagram.com/about/jobs/">Jobs</a>
+		<a href="https://www.instagram.com/legal/privacy/">Privacy</a>
+		<a href="https://www.instagram.com/legal/terms/">Terms</a>
+
+		&copy; 2014 Instagram
+	</footer>
+	</center>
+
 </body>
 </html>
