--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="css/main.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Instagram</title>
 </head>
-<body>
-  Instagram
+<body id="body">
+  <div class="blue" style="z-index: -1"></div>
+  <div class="phone"><img src="../starter-code/images/phones.png" alt=""></div>
 
-  Capture and Share the World's Moments
+ <div class="info">
+   
+    <div id="brand_login">
+      <img class="logo" src="../starter-code/images/brand.png">
+      <form class="login-home" action="/" method="post">
+        
+        <button> <img class="home" src="../starter-code/images/home.png"> <p class="login">Log In</p> </button>
+      </form>
+    </div>
+  
+    <div class="float">
+      <h1>Capture and Share <br>the World's Moments</h1>
+    
+      <p>Instagram is a fast, beautiful and fun way to share your life<br> with friends and family.<br>
+        <br>
+      Take a picture or video, choose a filter to transform its look<br> 
+      and feel, then post to Instagram &mdash; it's that easy. You can <br>
+      even share to Facebook, Twitter, Tumblr and more. It's a<br>
+      new way to see the world.<br>
+      <br>
+      Oh yeah, did we mention it's free</p>
+      <img class="apple" src="../starter-code/images/badge-iphone.png">
+        <img class="android" src="../starter-code/images/badge-android.png">
+    </div>
+ </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <footer>
+    <a href="#">About Us</a>
+    <a href="#">Support</a>
+    <a href="#">Blog</a>
+    <a href="#">Press</a>
+    <a href="#">API</a>
+    <a href="#">Jobs</a>
+    <a href="#">Privacy</a>
+    <a href="#">Terms</a>
+    &copy; 2014 Instagram
+  </footer>
 </body>
 </html>
