--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <title>Instagram</title>
+    <title>Instagram</title>
+    <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+    <section>
+        <div class="blue-box">
+            <article class="left">
+                <img src="images/phones.png" alt="phones-instagram">
+            </article>
+            <article class="right">
+                <div class="instagram-login">
+                    <img src="images/brand.png" alt="instagram-logo" id="instagram-logo">
+                    <button>
+                  <img src="images/home.png" alt="home-icon" id="home">
+                  <p>Log in</p>
+                </button>
+                </div>
+                <div class="clearfix"><div>
+                <div class="description">
+                    <h2>Capture and Share the World's Moments</h2>
+                    <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family. <br><br> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that
+                        easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. <br><br>Oh yeah, did we mention it's free?</p>
+                    <div class="stores">
+                        <img src="images/badge-iphone.png" alt="app-store">
+                        <img src="images/badge-android.png" alt="google-play">
+                    </div>
+                </div>
+            </article>
+        </div>
+        <div class="clearfix"><div>
+    </section>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <footer>
+        <div class="footer"></div>
+        <div class="footer-menu">
+            <a href="#">ABOUT US</a>
+            <a href="#">SUPPORT</a>
+            <a href="#">BLOG</a>
+            <a href="#">PRESS</a>
+            <a href="#">API</a>
+            <a href="#">JOBS</a>
+            <a href="#">PRIVACY</a>
+            <a href="#">TERMS</a>
+            <span>© 2014 Instagram</span>
+        </div>
+    </footer>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
+
 </html>
