--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,42 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+    <section class="box1">
+  <div class="titulo"> 
+    <img src="images/brand.png"><button><ul><li>Log in</li></ul></button>
+  </div>
 
-  Capture and Share the World's Moments
+    <article class="texto">
+  <div class="texto2"><h1>Capture and Share the World's Moments</h1>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+<p>
+  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+<p>
+  Oh yeah, did we mention it's free?</p>
+<div class="botones">
+  <img src="images/badge-iphone.png" alt="appstore">
+  <img src="images/badge-android.png" alt="playstore" class="google"></div>
+</div>
+  </article>
+  </section>
+  <img src="images/phones.png" class="phone" alt="iphone">
+</div>
+<nav class="links">
+  <ul>
+ <li>About Us</li>
+  <li>Support</li>
+  <li>Blog</li>
+  <li>Press</li>
+  <li>API</li>
+  <li>Jobs</li>
+  <li>Privacy</li>
+  <li>Terms</li>
+<li>&copy; 2014 Instagram</li>
+</ul>
+</nav>
 </body>
 </html>
