--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,58 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  
+  <link rel="stylesheet" type="text/css" href="/Users/abraham/Documents/IronHack/Week1/Day2/lab-css-instagram-clone/starter-code/css/main.css">
+    
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+ <div>
 
-  Oh yeah, did we mention it's free?
+  <header class = "head">
+
+    <img src="/Users/abraham/Documents/IronHack/Week1/Day2/lab-css-instagram-clone/starter-code/images/brand.png" alt="Instagram Logo" id="logo">
+
+    <button type="button">Log in</button>
+
+    <img src="/Users/abraham/Documents/IronHack/Week1/Day2/lab-css-instagram-clone/starter-code/images/frame.png" alt="cuadro planco" id="cuadrado">
+
+
+  </header>
+
+  <section class="cuadro">
+    <h3>Capture and Share the World's Moments</h3>
+    <p>
+    Instagram is a fast, beautiful and fun way to share your life with friends and family.
+
+    Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+
+    Oh yeah, did we mention it's free?
+    </p>
+
+  </section>
+
+
 
   Download on the App Store
   Get it on Google Play
 
-  About Us
+  
+  
+  Us
   Support
   Blog
   Press
   API
-  Jobs
+  Jobs<
   Privacy
   Terms
+  
 
   &copy; 2014 Instagram
+
+</div>
 </body>
 </html>
