--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,42 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <section class="dad">
+    <aside class="columnleft">
+      <img src="images/phones.png" alt="phones">
+    </aside>
+    <div class="columnright">
+      <div class="logo">
+        <img src="images/brand.png" alt="instagram">
+      </div>
+      <div class="text">
+        <h1>Capture and Share the World's Moments</h1>
+        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family. <br><br>
+        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br><br>
+        Oh yeah, did we mention it's free? </p>
+        <div class="buttons">
+      </div>
+        <img src="images/badge-iphone.png" alt="App Store">
+        <img src="images/badge-android.png" alt="Android">
+      </div>
+    </div>
+  </section>
+  <section>
+    <div class="footer">
+      <a href="#">About Us</a>
+      <a href="#">Support</a>
+      <a href="#">Blog</a>
+      <a href="#">Press</a>
+      <a href="#">API</a>
+      <a href="#">Jobs</a>
+      <a href="#">Privacy</a>
+      <a href="#">Terms</a>
+      &copy; 2014 Instagram
+    </div>
+  
+  </section>
 </body>
 </html>
