--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" type="text/css" href="css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <div class="background"></div>
+  <section class="phones">
+    <div>
+        <img src="/Users/administrador/Documents/IRONHACK/WEEK1/DAY2/lab-css-instagram-clone/starter-code/images/phones.png">
+      </div> 
+    </section>
+  <section class="info">
+     <div class="logoandhome">
+       <div class="logo">
+     <img src="/Users/administrador/Documents/IRONHACK/WEEK1/DAY2/lab-css-instagram-clone/starter-code/images/brand.png">
+    </div>
+     <button class="home" > 
+     <img src="/Users/administrador/Documents/IRONHACK/WEEK1/DAY2/lab-css-instagram-clone/starter-code/images/home.png"><p>Log In</p></img>
+     </button>
+    </div>
+  <section class="infotext">
+ <div>
+  <h1>Capture and Share <br/>
+    the World's Moments</h1>
 
-  Capture and Share the World's Moments
+  <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+  
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <p>Oh yeah, did we mention it's free?</p>
+</div>
+<div class="iphone">
+  <img src="/Users/administrador/Documents/IRONHACK/WEEK1/DAY2/lab-css-instagram-clone/starter-code/images/badge-iphone.png">
+</div>
+<div class="android">
+    <img src="/Users/administrador/Documents/IRONHACK/WEEK1/DAY2/lab-css-instagram-clone/starter-code/images/badge-android.png">
+  </div>
+  </section>
+</section>
+<footer>
+  <ul>
+  <li>About Us</li>
+  <li>Support</li>
+  <li>Blog</li>
+ <li>Press</li>
+ <li>API</li>
+ <li>Jobs</li>
+ <li>Privacy</li>
+ <li>Terms</li>
+ <li>&copy; 2014 Instagram</li>
+</ul>
+</footer>
 </body>
 </html>
