--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -7,7 +7,8 @@
 <body>
     <section class="box1">
   <div class="titulo"> 
-    <img src="images/brand.png"><button><ul><li>Log in</li></ul></button>
+    <img src="images/brand.png">
+    <button><img src="images/home.png" class="middle">  <span class="log">Log in<span></button>
   </div>
 
     <article class="texto">
@@ -36,7 +37,7 @@
   <li>Jobs</li>
   <li>Privacy</li>
   <li>Terms</li>
-<li>&copy; 2014 Instagram</li>
+<li><span class="brand">&copy; 2014 Instagram</span></li>
 </ul>
 </nav>
 </body>
