--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,70 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class= "firstDiv">
+    <div class="imagePhones">
+    <img src="images/phones.png" alt="phones">
+    </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <div class="positionPrimerDiv">
 
-  Oh yeah, did we mention it's free?
+      <img class="imageInsta" src="images/brand.png" alt="">   <button  class="logIn"> <img class="imageHome" src="images/home.png" alt="Log In"> Log in </button>
 
-  Download on the App Store
-  Get it on Google Play
+    </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  </div>
 
+<section>
+<div class="textFlotant">
+
+  <h3 class="headerTextFlotant">Capture and Share the World's Moments</h3>
+
+  <p>
+  Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.
+  </p>
+  <p>
+  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. 
+  </p>
+  <p>
+  Oh yeah, did we mention it's free? 
+  </p>
+</div>
+<div>
+  <div class="iphone">
+
+<img src="images/badge-iphone.png" alt="">
+  
+  </div>
+  <div class="android">
+<img src="images/badge-android.png" alt="">
+
+  </div>
+
+</div>
+
+  <div class="lastClass">
+
+  <a href="">About Us</a> |
+  <a href="">Support</a> |
+  <a href="">Blog</a> |
+  <a href="">Press</a> |
+  <a href="">API</a> |
+  <a href="">Jobs</a> |
+  <a href="">Privacy</a> |
+  <a href="">Terms</a> |
   &copy; 2014 Instagram
+  <br>
+  <br>
+  <br>
+  <br>
+  </div>
+  
+
+</section>
 </body>
 </html>
