--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="/Users/Claudz/code/Week1/lab-css-instagram-clone/starter-code/css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="header"></div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+
+
+  
+
+  <div class="container">
+      <img src="./images/brand.png" alt="instagram" class="insta">
+  <h2>Capture and Share the World's Moments</h2>
+
+  <h3>Instagram is a fast, beautiful and fun way to share your life with friends and family.</h3>
 
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
   Oh yeah, did we mention it's free?
+<br>
+  <button>
+      <img src="./images/badge-iphone.png">
+      <img src="./images/badge-android.png">
+      </button>
 
-  Download on the App Store
-  Get it on Google Play
+  </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <img class="phones" src="./images/phones.png" alt="phones">
 
-  &copy; 2014 Instagram
+  <center><nav>
+    <a href="About Us">About Us</a> |
+    <a href="Support">Support</a> |
+    <a href="Blog">Blog</a> |
+    <a href="Press">Press</a>
+    <a href="API">API</a>
+    <a href="Jobs">Jobs</a>
+    <a href="Privacy">Privacy</a>
+    <a href="Terms">Terms</a>
+    &copy; 2014 Instagram
+  </nav>
+
+
+  
+</center>
 </body>
 </html>
