--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -16,43 +16,52 @@
 
     <img src="/Users/abraham/Documents/IronHack/Week1/Day2/lab-css-instagram-clone/starter-code/images/brand.png" alt="Instagram Logo" id="logo">
 
-    <button type="button">Log in</button>
+    <button type="button"> <img src="/Users/abraham/Documents/IronHack/Week1/Day2/lab-css-instagram-clone/starter-code/images/home.png" alt="casita"id="casita"> Log in</button>
 
     <img src="/Users/abraham/Documents/IronHack/Week1/Day2/lab-css-instagram-clone/starter-code/images/frame.png" alt="cuadro planco" id="cuadrado">
 
+    <h3>Capture and Share the World's Moments</h3>
+    <p id = "p1">
+    Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span>  way to share your life with friends and family. <br>
+    </p> 
+    <p id="p2">
+    Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. <br>
+    </p>
+    <p id="p3">Oh yeah, did we mention it's free?
+    </p>
+
+    <img src="/Users/abraham/Documents/IronHack/Week1/Day2/lab-css-instagram-clone/starter-code/images/phones.png" alt="celulares" id="celulares">
+
+    <img src="/Users/abraham/Documents/IronHack/Week1/Day2/lab-css-instagram-clone/starter-code/images/badge-iphone.png" alt="Iphone" id="apple">
+
+    <img src="/Users/abraham/Documents/IronHack/Week1/Day2/lab-css-instagram-clone/starter-code/images/badge-android.png" alt="android" id="android">
+
+    <div class = "div">   
+  
+        <a href="#">About Us</a> 
+        <a href="#">Support</a>
+        <a href="#">Blog</a>
+        <a href="#">Press</a>
+        <a href="#">API</a>
+        <a href="#">Jobs</a>
+        <a href="#">Privacy</a>
+        <a href="#">Terms</a>
+        
+      </div>
+
+      <cpan id="ultimo"> &copy; 2014 Instagram</cpan>
 
   </header>
 
   <section class="cuadro">
-    <h3>Capture and Share the World's Moments</h3>
-    <p>
-    Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-    Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-    Oh yeah, did we mention it's free?
-    </p>
+    
 
   </section>
 
 
 
-  Download on the App Store
-  Get it on Google Play
 
   
-  
-  Us
-  Support
-  Blog
-  Press
-  API
-  Jobs<
-  Privacy
-  Terms
-  
-
-  &copy; 2014 Instagram
 
 </div>
 </body>
