--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,49 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="phone">
+    <img src="images/phones.png" alt="phones">
 
-  Capture and Share the World's Moments
+  </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="container">
+    <div class="insta-logo">
+      <button type="button" class="log-in">Log in</button>
+      <img src="images/brand.png">
+     </div>
+     <div class="content">
+    <h2>Capture and Share the World's Moments</h2>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Oh yeah, did we mention it's free?
+      Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Download on the App Store
-  Get it on Google Play
+      Oh yeah, did we mention it's free?</p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      <img src="images/badge-iphone.png" alt="App store logo">
 
-  &copy; 2014 Instagram
+      <img src="images/badge-android.png" alt="Google play logo">
+  
+    </div>
+   </div>
+  
+   <div class="footer">
+     
+      <a href="#">About Us</a>
+      <a href="#">Support</a>
+      <a href="#">Blog</a>
+      <a href="#">Press</a>
+      <a href="#">API</a>
+      <a href="#">Jobs</a>
+      <a href="#">Privacy</a>
+      <a href="#">Terms</a>
+
+      &copy; 2014 Instagram
+  
+  </div>
+
 </body>
 </html>
