--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="./css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="background-color"></div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="phones-photo">
+    <img src="./images/phones.png" alt="phones">
+  </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <div class="instagram-logo">
+    <img src="./images/brand.png" alt="instagram logo">
+  </div>
 
-  Oh yeah, did we mention it's free?
+  <div>
+      <button class="log-in"> <img src="images/home.png"><span class="button-text">Log in</span></button>
+  </div>
 
-  Download on the App Store
-  Get it on Google Play
+<div class="center-section-container">
+  <img class="frame" src="./images/frame.png" alt="">
+  <h2 class="capture-title">Capture and Share</h2> <h2 class="capture-title">the World's Moments</h2> 
+  <p> Instagram is a <b>fast</b>, <b> beautiful</b> and <b>fun</b> way to share your life with friends and family. </p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+   <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  &copy; 2014 Instagram
+  <p>Oh yeah, did we mention it's free?</p> 
+  
+    <img class="iphone" src="./images/badge-iphone.png" alt="Download on the App Store">
+    <img class="android" src="./images/badge-android.png" alt="Get it on Google Play">
+</div>
+
+<div class="footer-links">
+  <a href="#">About Us  </a>
+  <a href="#">Support</a>
+  <a href="#">Blog</a>
+  <a href="#">Press</a>
+  <a href="#">API</a>
+  <a href="#">Jobs</a>
+  <a href="#">Privacy</a>
+  <a href="#">Terms</a>
+  <span class="copyright"> &copy; 2014 Instagram </span>
+</div>
 </body>
 </html>
