--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -6,9 +6,27 @@
 </head>
 <body>
   
-  <h1>Instagram</h1>
+<div class="background-color"></div>
 
-  <h2>Capture and Share the World's Moments</h2>
+  <!--phone div-->
+  
+  <div class="phones">
+    <img src="./images/phones.png">
+  </div>
+
+    <!--logo div-->
+  <div class="main">
+  
+  <div>
+    <img src="./images/brand.png">
+    <button><img src="./images/home.png"><div><strong>Log In</strong></div></button>
+  </div>
+    
+  <!--explain div-->
+ 
+  <div class="explain">
+  <div>
+  <h1>Capture and Share the World's Moments</h1>
 
   <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> 
     way to share your life with friends and family.</p>
@@ -18,19 +36,34 @@
     Twitter, Tumblr and more. It's a new way to see the world.</p>
 
   <p>Oh yeah, did we mention it's free?</p>
+  </div>
+</div>
+ 
+  <div class="app-store">
+    <img src="./images/badge-iphone.png">
+    <img src="./images/badge-android.png">
 
-  Download on the <h4>App Store</h4>
-  Get it on Google Play
+  </div>
+  
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+</div>
+
+<!--end main div-->
+  
+<footer>
+  <div>
+    <a href="#">About Us</a>
+    <a href="#">Support</a>
+    <a href="#">Blog</a>
+    <a href="#">Press</a>
+    <a href="#">API</a>
+    <a href="#">Jobs</a>
+    <a href="#">Privacy</a>
+    <a href="#">Terms</a>
+
 
   &copy; 2014 Instagram
+</div>
+</footer>
 </body>
 </html>
