--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
   <title>Instagram</title>
 </head>
+
 <body>
-  Instagram
+<div class="top">
+<div class="header">
+  <img src = "images/brand.png">
+</div>
+<div class="button">
+  <button>
+    <img src="images/home.png">
+    Log in
+  </button>
+</div>
+</div>
+  
+<div class="phones">
+  <img src= "images/phones.png">
+</div>
 
-  Capture and Share the World's Moments
+<div class="container">
+  <h1>Capture and Share the World's Moments</h1>
+  <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.<br>
+  <br>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
+  <br>Oh yeah, did we mention it's free?</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+<div class="apple-google">
+    <img src = "images/badge-iphone.png">
+    <img src = "images/badge-android.png">
+</div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+</div>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
+<div class="links">
+  ABOUT US
+  SUPPORT
+  BLOG
+  PRESS
   API
-  Jobs
-  Privacy
-  Terms
+  JOBS
+  PRIVACY
+  TERMS
 
   &copy; 2014 Instagram
+</div>
+
 </body>
 </html>
