--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <title>Instagram</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Instagram</title>
+    <link rel="stylesheet" href="./css/main.css">
 </head>
+
 <body>
-  Instagram
+    <!-- Blue Background -->
 
-  Capture and Share the World's Moments
+    <div class="blue-back">
+        <div class="wrapper">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+            <!-- Left Side -->
+            <div class="left-side">
+                <div class="phone">
+                    <img src="./images/phones.png" alt="Mobile Phones">
+                </div>
+            </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+            <!-- Right Side -->
+            <div class="right-side">
+                <!-- Ig Logo -->
+                <div class="ig-logo">
+                    <img src="./images/brand.png" alt="Instagram Logo">
+                </div>
 
-  Download on the App Store
-  Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+                <!-- Home button -->
+                <!-- 
+                <div class="home-logo">
+                    <input type="button" value="Log in">
+                </div> -->
 
-  &copy; 2014 Instagram
+                <!-- White Text box -->
+                <div class="text-box">
+                    <!-- <img src="./images/frame.png" alt="" class="text-box"> -->
+                    <h2>Capture and Share the World's Moments</h2>
+                    <p>
+                        Instagram is a
+                        <b>fast</b> ,
+                        <b>beautiful </b> and
+                        <b> fun </b> way to share your life with friends and family.
+                    </p>
+                    <br>
+                    <p>
+                        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You
+                        can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+                    </p>
+                    <br>
+                    <p>
+                        Oh yeah, did we mention it's free?
+                    </p>
+
+                    <!-- Mobile download buttons -->
+                    <div class="mobile-btn">
+                        <img src="./images/badge-android.png" alt="Google Play" class="google-play">
+                        <img src="./images/badge-iphone.png" alt="App Store" class="app-store">
+                    </div>
+
+                </div>
+            </div>
+
+            <!-- Footer -->
+            <footer>
+                <nav>
+                    <div class="footer-nav">
+                        <ul>
+                            <li>
+                                <a href="#">About Us</a>
+                            </li>
+                            <li>
+                                <a href="#">Support</a>
+                            </li>
+                            <li>
+                                <a href="#">Blog</a>
+                            </li>
+                            <li>
+                                <a href="#">API</a>
+                            </li>
+                            <li>
+                                <a href="#">Jobs</a>
+                            </li>
+                            <li>
+                                <a href="#">Privacy</a>
+                            </li>
+                            <li>
+                                <a href="#">Terms</a>
+                            </li>
+                            <span class="copyright">
+                                &copy; 2014 Instagram
+                            </span>
+                        </ul>
+
+                    </div>
+                </nav>
+            </footer>
+        </div>
+    </div>
 </body>
+
 </html>
