--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" type="text/css" href="./css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <div class="blue-background"></div>
+  <div class="white-background"></div>
+ 
+  <div class="iphone-floater">
+    
+    <img src="./images/phones.png" alt="iphone image" />
+  </div>
+  <div class="insta-box">
+    <div clas="instagram-backgroundColor">
+      
+<img src="./images/brand.png" alt="instagram brand"/>
+    <div class="home-button">
 
-  Capture and Share the World's Moments
+      <img src="./images/home.png">    
+</div>
+  </div>
+  <div class="white-bg">
+  <h1>Capture and Share <br>the World's Moments</h1>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+  <br>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+  <br>
+  
   Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <br>
+  <br>
+  <br>
+<img src="./images/badge-iphone.png">
+<img src="./images/badge-android.png">
+ 
+  </div>
+</div>
+<footer>
+  <a href="#">About Us </a>
+  <a href="#">Support </a>
+  <a href="#">Blog </a>
+  <a href="#">Press </a>
+  <a href="#">API </a>
+  <a href="#">Jobs </a>
+  <a href="#">Privacy </a>
+  <a href="#">Terms </a>
+  <a href="#">&copy; 2014 Instagram </a>
+</footer>
 </body>
 </html>
