queda pendiente botonoes y mejores en el formato, progreso de 50%

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,21 +2,52 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
+  <header></header> 
 
-  Capture and Share the World's Moments
+<section>
+  <img src="images/phones.png" alt="">
+</section>
+    
+    <aside>
+      <img src="images/frame.png" alt="">
+    </aside>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+   <article>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <img src="file:///Users/francovargas/Desktop/IRONHACK/week1/day2/lab-css-instagram-clone/starter-code/images/brand.png" alt="">
 
-  Oh yeah, did we mention it's free?
+     <h3>Capture and Share the World's Moments</h3>
 
-  Download on the App Store
-  Get it on Google Play
+      <p>Instagram is a fast, beautiful and fun way to share your life with 
+          friends and family.
+    </p>
 
+      <p>Take a picture or video, choose a filter to transform its look
+    and feel, then post to Instagram &mdash; it's that easy. You can
+    even share to Facebook, Twitter, Tumblr and more. It's a
+    new way to see the world.
+    </p>
+
+      <p>Oh yeah, did we mention it's free? 
+    </p>
+  </article>
+
+          <div class:"descargas">
+  
+            <p> Download on the 
+            App Store</p>
+            <p>Get it on 
+            Google Play</p>
+          </div>
+ 
+ 
+  
+  
+<footer class="pie">
   About Us
   Support
   Blog
@@ -25,7 +56,9 @@
   Jobs
   Privacy
   Terms
+  </footer>
+
 
   &copy; 2014 Instagram
-</body>
+  </body>
 </html>
