Add basic html structure

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -4,28 +4,34 @@
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <img src="images/phones.png" alt="phones pic">
 
-  Capture and Share the World's Moments
+  <img src="images/brand.png" alt="Instagram Logo">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <button type="button"><img src="images/home.png">Log in</button>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <div src="images/frame.png">
+    <h2>Capture and Share the World's Moments</h2>
 
-  Oh yeah, did we mention it's free?
+    <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    Oh yeah, did we mention it's free?</p>
+  </div>
 
-  Download on the App Store
-  Get it on Google Play
+  <img src="images/badge-iphone.png" alt="App Store Pic">
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <img src="images/badge-android.png" alt="Google Play Pic">
+  
+  <nav>
+    <a href="#">About Us</a>
+    <a href="#">Support</a>
+    <a href="#">Blog</a>
+    <a href="#">Press</a>
+    <a href="#">API</a>
+    <a href="#">Jobs</a>
+    <a href="#">Privacy</a>
+    <a href="#">Terms</a>
+    &copy; 2014 Instagram
+  </nav>
 </body>
 </html>
