Add partial background style

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
   <img src="images/phones.png" alt="phones pic">
@@ -21,7 +22,7 @@
   <img src="images/badge-iphone.png" alt="App Store Pic">
 
   <img src="images/badge-android.png" alt="Google Play Pic">
-  
+
   <nav>
     <a href="#">About Us</a>
     <a href="#">Support</a>
