--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
+    <link rel="stylesheet" type="text/css" href="./css/main.css">
+
 <head>
   <title>Instagram</title>
 </head>
+
 <body>
-  Instagram
+<header class="head-blue">
 
-  Capture and Share the World's Moments
+</header>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+<div class=container>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <img src="./images/phones.png">
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
+      <button type="button"><img src="./images/brand.png"></button>
+      <button type="button"><img src="./images/home.png"></button>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+ 
 
-  &copy; 2014 Instagram
+
 </body>
 </html>
