--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,21 +2,36 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css" >
 </head>
+
 <body>
-  Instagram
+<div class="left-column">
+    <img src= "images/phones.png">
+</div>
+<div class="right-column">
+  <h1>
+    <img src="images/brand.png">
+    <div class="log-in">
+    <img src="images/home.png"> Log in
+    </div>
+  </h1>
 
-  Capture and Share the World's Moments
+  <div class="content">
+  <h2>Capture and Share <br>the World's Moments</h2>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  Instagram is a fast, beautiful and fun way to share your life with friends and family.<br>
 
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+  <br>Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
-
+  <br><img src="images/badge-android.png">
+  <img src="images/badge-iphone.png">
+  </div>
+</div>
+<footer>
+  <div class="links">
   About Us
   Support
   Blog
@@ -25,7 +40,9 @@
   Jobs
   Privacy
   Terms
-
+  </div> 
+  
   &copy; 2014 Instagram
+</footer>
 </body>
 </html>
