--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="../starter-code/css/main.css">
 </head>
-<body>
-  Instagram
 
-  Capture and Share the World's Moments
+<body class="background-blue">
+  <div>
+    <img class="phone" src="../starter-code/images/phones.png" alt="Phones">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <img class="logo" src="../starter-code/images/brand.png" alt="Instagram">
+    <div class="home">
+      <a href="#">
+        <span>Log In</span>
+      </a>
+    </div>
+    <div class="right-box">
+      <h1>Capture and Share the World's Moments</h1>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Oh yeah, did we mention it's free?
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy.
+        You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Download on the App Store
-  Get it on Google Play
+      <p>Oh yeah, did we mention it's free?</p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      <img class="ios-logo" src="../starter-code/images/badge-iphone.png" alt="Download on the App Store">
+      <img class="google-logo" src="../starter-code/images/badge-android.png" alt="Get it on Google Play">
+    </div>
+  </div>
 
-  &copy; 2014 Instagram
+  <footer>
+    <a href="#">
+      <span>About Us </span>
+    </a>
+    <a href="#">
+      <span>Support </span>
+    </a>
+    <a href="#">
+      <span>Blog</span>
+    </a>
+    <a href="#">
+      <span>Press</span>
+    </a>
+    <a href="#">
+      <span>API</span>
+    </a>
+    <a href="#">
+      <span>Jobs</span>
+    </a>
+    <a href="#">
+      <span>Privacy</span>
+    </a>
+    <a href="#">
+      <span>Terms </span>
+    </a>
+      <span class="copyright">&copy; 2014 Instagram</span>
+  </footer>
 </body>
+
 </html>
