--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,65 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
+
 </head>
+
 <body>
-  Instagram
+<div id="background">
+<!-- Empty div for background color. -->
+</div>
+  <img src= "./images/phones.png" alt="Two Phones" class="phones">
+  <!-- <img src= "./images/bgtile.png" alt="Line"> -->
+  <img src= "./images/brand.png" alt="Instragram Logo" class="instagram">
+  <button class="login"><img src= "./images/home.png" alt="Log-In" class="home">Log In<button>
+  
+    <div class="container">
+      <img src= "./images/frame.png" alt="Background Frame" class="frame">
+      <div class="text-box">
+      <h2>Capture and Share the World's Moments</h2>
 
-  Capture and Share the World's Moments
+      <p class="frame"> Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
+          <br><br>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          <br><br>
+          Oh yeah, did we mention it's free?
+      </p>
+    </div>
+      <div class="buttons">
+      <button><img src= "./images/badge-iphone.png" alt="Apple Store"></button>
+      <button><img src= "./images/badge-android.png" alt="Google Store"></button>
+      </div>
+</div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+<footer>
+    
+      About Us  
+      Support  
+      Blog  
+      Press  
+      API  
+      Jobs  
+      Privacy  
+      Terms  
+      <em class="grey">&copy; 2014 Instagram</em>
+  </footer> 
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
+<!-- FOOTER AS A LIST ITEM WOULDN'T GO INLINE
+  <footer>
+  <ul></ul>
+    <li>About Us</li>
+    <li>Support</li>
+    <li>Blog</li>
+    <li>Press</li>
+    <li>API</li>
+    <li>Jobs</li>
+    <li>Privacy</li>
+    <li>Terms</li>
+    <li class="grey">&copy; 2014 Instagram</li>
+</ul>
+</footer> -->
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
 </html>
