--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,37 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="container">
+<img class="phone" src="images/phones.png" alt="phons">
+<img class="insta" src="images/brand.png" alt="brand">
+<button class="home"><img src="images/home.png" alt="home"> Log in</button>
+  <section class="frame">
+  <h1>Capture and Share<br> the World's Moments</h1>
+  <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and 
+    <strong>fun</strong> way to share your life with friends and family.</p>
+  <p id="a">Take a picture or video, choose a filter 
+    to transform its look and feel, then post to Instagram &mdash; it's 
+    that easy. You can even share to Facebook, Twitter, Tumblr and more. 
+    It's a new way to see the world.</p>
+  <p id="b">Oh yeah, did we mention it's free?</p>
+    <img class="apple" src="images/badge-iphone.png" alt="badge iphone">
+    <img class="android" src="images/badge-android.png" alt="badge android">
+  </section>
+  </div>
+  <footer>
+      <a href="#">About Us</a> 
+      <a href="#">Support</a> 
+      <a href="#">Blog</a> 
+      <a href="#">Press</a>
+      <a href="#">API</a> 
+      <a href="#">Jobs</a> 
+      <a href="#">Privacy</a> 
+      <a href="#">Terms</a>
+      <spam class="copy">@ 2014 INSTAGRAM</spam>
+  </footer>
 </body>
 </html>
