--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,44 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+<div class="BG">
+</div>
+<div class="container">
+        <img  class="phone" src="images/phones.png" alt="">
+        <img class="brand" src="images/brand.png" alt="">
+        <div class="login">
+          <h3><img class="home" src="images/home.png" alt=""> Log in</h3>
+        </div>
+        
+          <img class="frame" src="images/frame.png" alt="">      
+              <div class="text">
+                <h2>Capture and Share the World's Moments</h2>
+                <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.<br/>
+                  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; 
+                  it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br/>
+                  Oh yeah, did we mention it's free?
+              </p>
+              <img class="app" src="images/badge-iphone.png" alt="">
+              <img class="google" src="images/badge-android.png" alt="">
+              </div>
+</div>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="footer">
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+    
+      <li>&copy; 2014 Instagram</li>
+    </ul>
+  </div>
 </body>
 </html>
