--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,51 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
+  <div class="blue-background"></div>
+  <div class="main-content">
+    <article class="phone-image-align">
+      <img src="images/phones.png" alt="Phones Image">
+    </article>
+    
+    <div class="main-right">
+    <article class="article2">
+      <img src="images/brand.png" alt="Instagram Brand Image">
+      <ul class="log-in-button">
+          <a href="#"><img src="images/home.png" class="home-image"><li class="log-in">Log in</li></a>
+      </ul>
+    </article>
+    <article class="main-text">
+      <h2>Capture and Share<br>the World's Moments </h2>
+      <!-- <h2>the World's Moments</h2> -->
+      <p>Instagram is a <strong>fast,</strong> <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      <p>Oh yeah, did we mention it's free?</p>
+    </article> 
+    <article class="article4">
+    <img src="images/badge-iphone.png" alt="Iphone Badge Image" class="badge-spacing">
+    <img src="images/badge-android.png" alt="Android Badge Image">
+    </article>
+    </div>
+  </div>
+  
+  <footer class="footer">
+    <ul>
+    <li><a href="#">About Us</a></li>
+    <li><a href="#">Support</a></li>
+    <li><a href="#">Blog</a></li>
+    <li><a href="#">Press</a></li>
+    <li><a href="#">API</a></li>
+    <li><a href="#">Jobs</a></li>
+    <li><a href="#">Privacy</a></li>
+    <li><a href="#">Terms</a></li>
+    <li class="trademark-color">&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
