--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+<title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <div class="bgimage">
+  <section class="header">
+    <div>
+      <img src="/Users/chris/Code/labs/lab-css-instagram-clone/starter-code/images/phones.png" alt="phones" class="phones"> 
+    </div>
+    </section>
+    <div class="logo">
+      <img src="/Users/chris/Code/labs/lab-css-instagram-clone/starter-code/images/brand.png" alt="Instagram logo">
+    </div>
+    <div class="lgn-btn">
+      <img src="/Users/chris/Code/labs/lab-css-instagram-clone/starter-code/images/home.png" alt="home button">
+      <a href="#"><strong>Log In</strong></a>
+    </div>
+    <section>
+  <div class="body">
+    <h1>Capture and Share the World's Moments</h1>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    <p>
+      Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
+      <br><br>
+      Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <br><br>
+      Oh yeah, did we mention it's free?
+    </p>
+    <img src="/Users/chris/Code/labs/lab-css-instagram-clone/starter-code/images/badge-iphone.png" alt="App Store Badge" class="apps">
+    <img src="/Users/chris/Code/labs/lab-css-instagram-clone/starter-code/images/badge-android.png" alt="Google Badge" class="apps">
+  </div>
+</section>
+  <div class="footer">
+    <footer>
+      <ul>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+        
+        <li>&copy; 2014 Instagram</li>
+        </ul>
+    </footer>
+</div>
+</div>
 </body>
 </html>
