--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,49 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
+<div>
+  <div class="background" > 
+      <a href="#" class="bttn">
+          <img src="images/home.png" alt="Home Icon" class=""> Log in
+        </a>
+      <img src="images/brand.png" alt="Logo" class="logo" >
+</div>
+    <img src="images/phones.png" alt="Phones" class="phones">
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="info-container">
+    <div class="head-info">
+  <h2>Capture and Share<br/> the World's Moments</h2>
+    </div>
+    <p class="body-info">Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to 
+    share your life with friends and family.
+  </p>
+  <p class="body-info">Take a picture or video, choose a filter to 
+      transform its look and feel, then post to Instagram 
+      &mdash; it's that easy. You can even share to 
+      Facebook, Twitter, Tumblr and more. It's a new way 
+      to see the world.
+    </p>
+  <p class="body-info">Oh yeah, did we mention it's free?
+    </p>
+    </div>
+    <div class="store-link">
+  <a href="#"><img src="images/badge-android.png" alt="Google Play"> <img src="images/badge-iphone.png" alt="App Store" class="app-store-logo"></a>
+</div>
+<div class="contact-info" >
+ <a href="#" class="link">About Us |</a>
+ <a href="#" class="link">Support |</a>
+ <a href="#" class="link">Blog |</a>
+ <a href="#" class="link">Press Us |</a>
+ <a href="#" class="link">API |</a>
+ <a href="#" class="link">Jobs |</a>
+ <a href="#" class="link">Privacy |</a>
+ <a href="#" class="link">Terms |</a>
+ 
+ &copy; 2014 Instagram
+</div>
+  </div>
 </body>
 </html>
