--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,45 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
-<body>
-  Instagram
+  <body>
+    <img src="/home/teresa/code/lab-css-instagram-clone/starter-code/images/phones.png" alt="iphones picture" class="phones">
+    <img src="/home/teresa/code/lab-css-instagram-clone/starter-code/images/brand.png" alt="brand name" class="brand">
+    <button type="button" href="#" class="floats button">
+    <img src="/home/teresa/code/lab-css-instagram-clone/starter-code/images/home.png" alt="home button" class="floats home">  
+      Log in</button>
 
-  Capture and Share the World's Moments
+      <div class="frame">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <h2 class="head1">Capture and Share </br> the World's Moments</h2>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <p class="text">Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.
+        </br>
+        </br>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        </br>
+        </br>Oh yeah, did we mention it's free?</p>
+        </div>
+   
+    <img src="/home/teresa/code/lab-css-instagram-clone/starter-code/images/badge-iphone.png" alt="download on the app store" class="floats app1">
+    <img src="/home/teresa/code/lab-css-instagram-clone/starter-code/images/badge-android.png" alt="get it on google play" class="floats app2">
 
-  Oh yeah, did we mention it's free?
+    <div class="clearfix"></div>
 
-  Download on the App Store
-  Get it on Google Play
+    <div class="footer">
+      <ul>
+        <li><a href="#">About U</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+        <li>&copy; 2014 Instagram</li>
+      </ul>
+    <div class="clearfix"></div>
+    </div>
+  </body>
 </html>
